# sentinella

./: .editorconfig  .env.example  .gitignore  Makefile  README.md  docker-compose.yml
docs/adr/: 0001-monorepo-structure.md  0002-language-selection.md
infra/prometheus/: prometheus.yml
services/aibom/: Dockerfile  README.md  pyproject.toml
services/aibom/app/: config.py  main.py
services/aibom/app/models/: bom.py
services/aibom/app/routes/: bom.py
services/aibom/app/services/: generator.py
services/aibom/tests/: test_bom.py
services/console/: .dockerignore  Dockerfile  next.config.ts  package-lock.json  package.json
services/console/app/: layout.tsx  page.tsx
services/console/app/events/: page.tsx
services/console/app/models/: page.tsx
services/console/components/: event-table.tsx  nav.tsx  status-badge.tsx
services/console/lib/: api.ts
services/evals/: .dockerignore  Dockerfile  pyproject.toml
services/evals/app/: config.py  main.py
services/evals/app/models/: evaluation.py
services/evals/app/routes/: evaluations.py
services/evals/tests/: test_evaluations.py
services/gateway/: .dockerignore  Dockerfile  go.mod  go.sum
services/ledger/: Dockerfile  pyproject.toml
services/ledger/app/: config.py  main.py
services/ledger/tests/: test_events.py
services/policy/: Dockerfile  pyproject.toml
services/policy/app/: config.py  main.py
services/policy/app/models/: policy.py
services/policy/app/routes/: evaluate.py
services/policy/app/services/: opa.py
services/policy/tests/: test_evaluate.py
(+15 files in other folders)
